--- a/package.json
+++ b/package.json
@@ -9,8 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/jalaali": "^2.16.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@google-cloud/local-auth": "^2.1.0",
+    "@headlessui/react": "^1.7.2",
+    "@heroicons/react": "^2.0.11",
+    "@mui/x-date-pickers": "^5.0.3",
+    "dayjs": "^1.11.5",
+    "googleapis": "^105.0.0",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.9.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dates": "^21.8.0",
+    "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.0",
+    "react-responsive-grid": "^0.3.4",
+    "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
