--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@heroicons/react": "^2.0.11",
     "@mui/x-date-pickers": "^5.0.3",
     "dayjs": "^1.11.5",
+    "flowbite-datepicker": "^1.2.2",
     "googleapis": "^105.0.0",
     "moment": "^2.29.4",
     "moment-jalaali": "^0.9.6",
+    "mongoose": "^6.6.1",
+    "nexmo": "^2.9.1",
+    "pro-gallery": "^4.1.49",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.0",
     "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.0",
+    "react-image-gallery": "^1.2.9",
     "react-responsive-grid": "^0.3.4",
     "react-router-dom": "^6.4.1"
   },
