--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.0",
     "react-image-gallery": "^1.2.9",
+    "react-intersection-observer": "^9.4.0",
     "react-responsive-grid": "^0.3.4",
     "react-router-dom": "^6.4.1"
   },
