--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-image-gallery": "^1.2.9",
     "react-intersection-observer": "^9.4.0",
     "react-responsive-grid": "^0.3.4",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
