--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@mui/x-date-pickers": "^5.0.3",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "flowbite-datepicker": "^1.2.2",
     "googleapis": "^105.0.0",
